test Fegin port and clinet